--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [tool.poetry]
 name = "fastbuilder"
-version = "0.2.0"
+version = "0.3.0"
 description = "Step-by-step tutorial for building a FastAPI data app"
 authors = ["liquidcarbon <akscrps@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+requests = "^2.31.0"
 
 
 [build-system]
